# reflex_takktile2_ros_interface

./: .gitignore  CMakeLists.txt  NOTICE  README.md  package.xml  setup.py
docs/: README.md
docs/source/: DOC.rst  conf.py  index.rst
src/reflex_takktile2_ros_interface/: __init__.py  config.py  takktile2_hand.py
test/: test_hand.py
